# fmatrix

./: fmatrix.cabal
src/Data/Matrix/: Alias.hs  Functional.hs  Math.hs  Mutable.hs  Types.hs
src/Data/Matrix/Algorithms/: Banded.hs  Bidiagonalization.hs  GaussJ.hs  LUDecomp.hs  Substitution.hs  Tridag.hs
