name:                   fmatrix
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Matrix.Alias
                        Data.Matrix.Math
                        Data.Matrix.Mutable
                        Data.Matrix.Types
                        Data.Matrix.Algorithms.Banded
                        Data.Matrix.Algorithms.Bidiagonalization
                        Data.Matrix.Algorithms.GaussJ
                        Data.Matrix.Algorithms.LUDecomp
                        Data.Matrix.Algorithms.Substitution
                        Data.Matrix.Algorithms.Tridag
  build-depends:        base >= 3, permutation, mtl, array, storablevector, stateref, containers
