name:                   fmatrix
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Math
synopsis:               Experimental matrix interface and some algorithms
description:            Experimental generic matrix interface and some numerical linear algebra algorithms

source-repository head
  type: git
  location: git://github.com/mokus0/fmatrix.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Matrix.Alias
                        Data.Matrix.Math
                        Data.Matrix.Mutable
                        Data.Matrix.Types
                        Data.Matrix.Algorithms.Banded
                        Data.Matrix.Algorithms.Bidiagonalization
                        Data.Matrix.Algorithms.GaussJ
                        Data.Matrix.Algorithms.LUDecomp
                        Data.Matrix.Algorithms.Substitution
                        Data.Matrix.Algorithms.Tridag
  build-depends:        base >= 3 && <5, 
                        array,
                        containers,
                        mtl,
                        permutation,
                        stateref,
                        vector
